syntax = "proto3";

package proto;

import "position.proto";

message RobotPosition {
    string camera_name = 1;
    float timestamp = 2;
    float confidence = 3;
    Position2d estimated_position = 4;
}